[gd_scene load_steps=48 format=2]

[ext_resource path="res://images/characters/player/attack punch/adventurer-punch-06.png" type="Texture" id=1]
[ext_resource path="res://images/characters/player/attack punch/adventurer-punch-09.png" type="Texture" id=2]
[ext_resource path="res://images/characters/player/attack punch/adventurer-punch-10.png" type="Texture" id=3]
[ext_resource path="res://images/characters/player/attack punch/adventurer-punch-08.png" type="Texture" id=4]
[ext_resource path="res://images/characters/player/attack punch/adventurer-punch-00.png" type="Texture" id=5]
[ext_resource path="res://images/characters/player/attack punch/adventurer-punch-04.png" type="Texture" id=6]
[ext_resource path="res://images/characters/player/attack punch/adventurer-punch-05.png" type="Texture" id=7]
[ext_resource path="res://images/placeholders/circle of light.png" type="Texture" id=8]
[ext_resource path="res://images/characters/player/attack punch/adventurer-punch-02.png" type="Texture" id=9]
[ext_resource path="res://images/characters/player/attack punch/adventurer-punch-03.png" type="Texture" id=10]
[ext_resource path="res://images/characters/player/attack punch/adventurer-punch-11.png" type="Texture" id=11]
[ext_resource path="res://images/characters/player/attack punch/adventurer-punch-01.png" type="Texture" id=12]
[ext_resource path="res://images/characters/player/attack punch/adventurer-punch-07.png" type="Texture" id=13]
[ext_resource path="res://src/characters/Enemy.gd" type="Script" id=14]
[ext_resource path="res://fonts/BebasNeue Bold.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://images/characters/player/roll/adventurer-smrslt-00.png" type="Texture" id=16]
[ext_resource path="res://images/characters/player/roll/adventurer-smrslt-01.png" type="Texture" id=17]
[ext_resource path="res://images/characters/player/jump/adventurer-jump-00.png" type="Texture" id=18]
[ext_resource path="res://images/characters/player/roll/adventurer-smrslt-03.png" type="Texture" id=19]
[ext_resource path="res://images/characters/player/roll/adventurer-smrslt-02.png" type="Texture" id=20]
[ext_resource path="res://images/characters/player/attack air kick/adventurer-drop-kick-01.png" type="Texture" id=21]
[ext_resource path="res://images/characters/enemies/slime/idle/slime-idle-0.png" type="Texture" id=22]
[ext_resource path="res://images/characters/player/attack air kick/adventurer-drop-kick-02.png" type="Texture" id=23]
[ext_resource path="res://images/characters/player/attack air kick/adventurer-drop-kick-00.png" type="Texture" id=24]
[ext_resource path="res://images/characters/player/jump/adventurer-jump-02.png" type="Texture" id=25]
[ext_resource path="res://images/characters/player/jump/adventurer-jump-03.png" type="Texture" id=26]
[ext_resource path="res://images/characters/player/fall/adventurer-fall-00.png" type="Texture" id=27]
[ext_resource path="res://images/characters/player/attack air kick/adventurer-drop-kick-03.png" type="Texture" id=28]
[ext_resource path="res://images/characters/player/fall/adventurer-fall-01.png" type="Texture" id=29]
[ext_resource path="res://images/characters/enemies/slime/idle/slime-idle-1.png" type="Texture" id=30]
[ext_resource path="res://images/characters/enemies/slime/idle/slime-idle-2.png" type="Texture" id=31]
[ext_resource path="res://images/characters/enemies/slime/idle/slime-idle-3.png" type="Texture" id=32]
[ext_resource path="res://images/characters/enemies/slime/run/slime-move-3.png" type="Texture" id=33]
[ext_resource path="res://images/characters/enemies/slime/run/slime-move-2.png" type="Texture" id=34]
[ext_resource path="res://images/characters/enemies/slime/run/slime-move-0.png" type="Texture" id=35]
[ext_resource path="res://images/characters/enemies/slime/run/slime-move-1.png" type="Texture" id=36]
[ext_resource path="res://src/calculators/Hurtbox.tscn" type="PackedScene" id=37]
[ext_resource path="res://src/animations/HurtAnimationPlayer.tscn" type="PackedScene" id=38]
[ext_resource path="res://images/characters/enemies/slime/hurt/slime-hurt-3.png" type="Texture" id=39]
[ext_resource path="res://images/characters/enemies/slime/hurt/slime-hurt-2.png" type="Texture" id=40]
[ext_resource path="res://images/characters/enemies/slime/hurt/slime-hurt-1.png" type="Texture" id=41]
[ext_resource path="res://images/characters/enemies/slime/hurt/slime-hurt-0.png" type="Texture" id=42]
[ext_resource path="res://src/timers/FrozenTimer.tscn" type="PackedScene" id=43]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ) ],
"loop": true,
"name": "idle",
"speed": 6.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 26 ) ],
"loop": false,
"name": "jump",
"speed": 10.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 1 ), ExtResource( 13 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 11 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": false,
"name": "attack_punch",
"speed": 8.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 19 ) ],
"loop": false,
"name": "roll",
"speed": 12.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 21 ), ExtResource( 23 ), ExtResource( 28 ) ],
"loop": false,
"name": "attack_air_kick",
"speed": 15.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 36 ), ExtResource( 34 ), ExtResource( 33 ) ],
"loop": true,
"name": "run",
"speed": 8.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 29 ) ],
"loop": false,
"name": "fall",
"speed": 20.0
}, {
"frames": [ ExtResource( 42 ), ExtResource( 41 ), ExtResource( 40 ), ExtResource( 39 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.73019, 11.2556 )

[sub_resource type="Animation" id=3]
resource_name = "attack_punch"

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 15 )

[node name="Enemy" type="KinematicBody2D" groups=[
"enemies",
]]
collision_layer = 4
script = ExtResource( 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 15.3678 )
scale = Vector2( -2.5, 2.5 )
frames = SubResource( 1 )
animation = "hurt"
frame = 3
playing = true

[node name="Hitboxes" type="Node2D" parent="AnimatedSprite"]

[node name="Hurtboxes" type="Node2D" parent="AnimatedSprite"]

[node name="Hurtbox" parent="AnimatedSprite/Hurtboxes" instance=ExtResource( 37 )]
position = Vector2( 0, 6.38747 )
scale = Vector2( 0.920001, 0.552 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.427189, 42.1152 )
scale = Vector2( 1.50668, 0.320001 )
shape = SubResource( 2 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack_punch = SubResource( 3 )

[node name="HurtAnimationPlayer" parent="AnimationPlayer" instance=ExtResource( 38 )]

[node name="StateLabel" type="Label" parent="."]
visible = false
margin_left = -100.927
margin_top = 52.8246
margin_right = 99.0726
margin_bottom = 72.8246
custom_fonts/font = SubResource( 4 )
text = "IDLE"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.301961 )
show_behind_parent = true
position = Vector2( 0, 45.7878 )
scale = Vector2( 0.2, 0.025 )
texture = ExtResource( 8 )

[node name="Tween" type="Tween" parent="."]

[node name="Timers" type="Node2D" parent="."]

[node name="HurtTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="FrozenTimer" parent="Timers" instance=ExtResource( 43 )]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer/HurtAnimationPlayer" to="." method="_on_animation_done"]
[connection signal="animation_finished" from="AnimationPlayer/HurtAnimationPlayer" to="." method="_on_HurtAnimationPlayer_animation_finished"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
